@@ -1,3 +1,12 @@
+2001-10-25  Mark McLoughlin  <mark@skynet.ie>
+
+	* menu.c: (menus_have_icons): use gconf.
+
+2001-10-25  Mark McLoughlin  <mark@skynet.ie>
+
+	* session.c: (load_up_globals), (write_global_config),
+	(convert_write_config): remove tile_when_over usage.
+
 2001-10-25  Glynn Foster  <glynn.foster@sun.com>
 
 	* panelglobalconfig.schema: First stab at creating 
